fixed overflow-x

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -412,3 +412,7 @@ body {
 .card {
   margin: 0.3rem;
 }
+#root {
+  width: 100%;
+  overflow-x: hidden;
+}
